feat: 增强多处细节的处理与访问体验

--- a/front-end/src/assets/scss/about.scss
+++ b/front-end/src/assets/scss/about.scss
@@ -22,6 +22,7 @@
             font-family: "Comic Sans MS", curslve, sans-serif;
         }
     }
+    
 }
 article {
     width: 80%;
@@ -30,4 +31,8 @@ article {
     p {
         margin: 1.2rem 0;
     }
+    a {
+        color: #FA5555;  
+    }
+
 }
