--- a/front-end/src/assets/scss/components/comment.scss
+++ b/front-end/src/assets/scss/components/comment.scss
@@ -1,7 +1,7 @@
 .comment {
     h1 {
         border-bottom: 1px dashed #d2d2d2;
-        margin: 1rem;
+        margin: 1rem 1rem 1rem 0;
         font-size: 2rem;
     }
     .comment-item {
