misc: 显示发布界面，现判定未登录不能发布文章

--- a/front-end/src/assets/scss/app.scss
+++ b/front-end/src/assets/scss/app.scss
@@ -27,7 +27,7 @@ a {
 
 .fade-enter-active,
 .fade-leave-active {
-    transition: all .4s ease;
+    transition: all .4s linear;
 }
 .fade-enter,
 .fade-leave-active {
