--- a/front-end/src/assets/scss/post.scss
+++ b/front-end/src/assets/scss/post.scss
@@ -48,7 +48,7 @@ $mainHeight: 100vh-$titleHeight;
     .md-main {
       box-sizing: border-box;
       height: 92%;
-      overflow-y: scroll;
+      overflow-y: auto;
       padding: 5px 7px;
     }
   }
