--- a/front-end/src/assets/scss/components/header.scss
+++ b/front-end/src/assets/scss/components/header.scss
@@ -28,6 +28,7 @@ header {
         max-width: 94%;
         top: 50%;
         left: 50%;
+        font-family: -apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen,ubuntu,cantarell,fira sans,droid sans,helvetica neue,sans-serif;
         transform: translateX(-50%) translateY(-50%);
         h1 {
             font-size: 3.8rem;
