--- a/front-end/src/assets/scss/app.scss
+++ b/front-end/src/assets/scss/app.scss
@@ -23,15 +23,18 @@ a {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
+    .router-view {
+        height: 100%;
+    }
 }
 
 .fade-enter-active,
 .fade-leave-active {
-    transition: all .4s linear;
+    transition: opacity .4s linear;
 }
 .fade-enter,
 .fade-leave-active {
-    opacity: 0;
+    opacity: 0.2;
 }
 
 @media only screen and (max-width: 726px) {
