--- a/front-end/src/assets/scss/components/tagContentList.scss
+++ b/front-end/src/assets/scss/components/tagContentList.scss
@@ -1,6 +1,7 @@
 .list-wrapper {
     width: 80%;
     margin: 0 auto;
+    min-height: 50vh;
     @media screen and (max-width: 768px) {
         width: 100%;
     }
